# mx-tester

./: Cargo.toml  README.md
.github/workflows/: rust.yml
res/workers/: README.md  postgres.sql  shared.yaml.j2  supervisor.service.patch  supervisord.conf.j2  workers_start.py
src/: cleanup.rs  exec.rs  lib.rs  main.rs  net.rs  postgres.rs  registration.rs  util.rs  workers.rs
tests/: config.rs  shared.rs  simple.rs
