[package]
name = "mx-tester"
description = "A tool to help test Matrix bots and Synapse modules."
version = "0.2.9"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/matrix-org/mx-tester"

[dependencies]
# Command-line
clap = "3.1"
comma = "1.0"
ezexec = "0.2"
shellexpand = "2.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

# Matrix
matrix-sdk = { version = "0.4.1",  features = ["encryption", "sled_cryptostore"] }

# HTTP
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0"
rand = "0.8"

# File manipulation
dircpy = "0.3"

# Logging, errors
anyhow = "1.0"

# Async
futures-util = "0.3"
tokio-stream = "0.1"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

# Crypto verification
hmac = "0.12.0"
sha-1 = "0.10.0"
data-encoding = "2.3.2"

# Logging
env_logger = "0.9"
log = "0.4"

# Developer comfort
async-trait = "0.1"
itertools = "0.10"
lazy_static = "1.4"
typed-builder = "0.9"

# Unix manipulation
nix = "0.23"

# Docker
bollard = "0.11"
hyper = "0.14"
tar = "0.4"

[dev-dependencies]
# Generate random user ids
uuid = { version = "0.8", features = ["v4"] }

# Test APIs
synapse-admin-api = {git = "https://github.com/ruma/synapse-admin-api", rev = "24de3512f13a4c9ca4c9d42f3b6591876be3d96b", features = ["client"] }

[features]
# Needed to use macro `ruma_api!`.
client = []
default = ["client"]
