[package]
name = "mx-tester"
description = "A tool to help test Matrix bots and Synapse modules."
version = "0.4.0-pre1"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/matrix-org/mx-tester"

[dependencies]
# Command-line
clap = { version = "3.1", features = ["cargo"] }
comma = "1.0"
ezexec = "0.3"
shellexpand = "2.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Matrix
matrix-sdk = { version = "0.5",  features = ["e2e-encryption", "sled"] }

# HTTP
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0"
rand = "0.8"
url = { version = "2.3", features = ["serde"] }

# File manipulation
dircpy = "0.3"

# Logging, errors
anyhow = "1.0"

# Async
futures-util = "0.3"
tokio-stream = "0.1"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Crypto verification
hmac = "0.12.0"
sha-1 = "0.10.0"
data-encoding = "2.3.2"

# Logging
env_logger = "0.9"
log = "0.4"

# Developer comfort
async-trait = "0.1"
itertools = "0.10"
lazy_static = "1.4"
typed-builder = "0.10"

# Unix manipulation
nix = "0.25"

# Docker
bollard = { version = "0.13", features = ["ssl"] }
hyper = "0.14"
tar = "0.4"

[dev-dependencies]
# Generate random user ids
uuid = { version = "1.0", features = ["v4"] }

# Test APIs
synapse-admin-api = {version = "0.4.0", features = ["client"] }

[features]
# Needed to use macro `ruma_api!`.
client = []
default = ["client"]
